[package]
name = "rca"
version = "0.1.0"
edition = "2021"
authors = ["Sofiane Akermoun <s.akermoun@hacken.io>"]
description = """
rca is a Rust Code Analyzer tool that searches for security and code quality issues
in cargo and Rust projects.
"""
keywords = ["security", "quality", "vulnerability", "audit", "code"]
license = "Unlicense OR MIT"
documentation = "https://github.com/hknio/rca"
homepage = "https://github.com/hknio/rca"
repository = "https://github.com/hknio/rca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rca"
path = "src/rca/bin/main.rs"

[[bin]]
name = "cargo-rca"
path = "src/cargo-rca/bin/main.rs"

[dependencies]
regex = "1.7.0"
thiserror = "1.0.38"
which = "4.3.0"
ansi_term = "0.12.1"
tokei = "12.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
